tests/ui/feature-gates/feature-gate-profiler-runtime.rs
#![profiler_runtime] //~ ERROR the `#[profiler_runtime]` attribute is

fn main() {}
